bk_ida/gobmkida/g0/purge_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/purge_persistent_owl_cache/src/engine/persistent.c:1117:6: error: use of undeclared identifier 'last_purge_position_number_0'
if ( last_purge_position_number_0 != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/purge_persistent_owl_cache/src/engine/persistent.c:1119:1: error: use of undeclared identifier 'last_purge_position_number_0'
last_purge_position_number_0 = position_number; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/purge_persistent_owl_cache/src/obj/1/persistent.o] Error 1
